<resources>
    <string name="app_name">Helpee</string>

    <string name="app_id">1468153676808843</string>
    <string name="events_title">Events</string>
    <string name="action_settings">Settings</string>
    <string name="profile_title">Profile</string>
    <string name="cancel">Cancel</string>
    <string name="check_connection">"Please check your internet connection and try again. "</string>
    <string name="check_location">Please check your location settings and try again.</string>
    <string name="open_settings">Open settings</string>
    <string name="request_error">There has been an error with your request, please try again later</string>
    <string name="logout">Logout</string>
    <string name="session_expired">Your session has expired. Please login again.</string>
    <string name="btn_chip_in">CHIP IN</string>
    <string name="btn_help_title">I\'LL HELP</string>
    <string name="log_in">LOG IN</string>
    <string name="login_text">Log in or create an account and start helping</string>
    <string name="error_occured_title">An error occurred</string>
    <string name="loading_msg">Loading …</string>

    <string name="points">+%s POINTS </string>
    <string name="needs_help">%s NEEDS HELP </string>

    <string name="create_account">Create an account</string>
    <string name="click_to_create_account">Don\'t have an account? Click here</string>
    <string name="check_username">Please check your username and try again</string>
    <string name="check_email">Please check your e-mail and try again</string>
    <string name="check_password">Please check your password and try again</string>
    <string name="check_picture">Sorry, but we want everyone to see how pretty you are.\nTake a picture and try again!</string>
    <string name="no_geocoder_available">No geocoder available</string>


    <string name="fetch_address">Fetch address</string>


    <string name="address_found">Address found</string>


    <string name="no_address_found">No address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">The service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="single_point">1 POINT</string>
    <string name="int_points">%s points</string>
    <string name="chips_left">%s LEFT</string>
    <string name="reward">Reward</string>
    <string name="select_date">Select date</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="select_time">Select time</string>
    <string name="select_location">Select location</string>
    <string name="location">Location</string>
    <string name="create_new_event">Create a new event</string>
    <string name="click_for_location">Click to select a location</string>
    <string name="event_created">Event created!</string>
    <string name="failed_location">Failed to select location, please try again.</string>
    <string name="create_an_event">Create an event!</string>
    <string name="error_title">Ooops! Seems like you forgot to give your event a title! Fill it out and try again!</string>
    <string name="error_description">Ooops! Seems like you forgot a description! C\'mon, think of something and try again!</string>
    <string name="error_time">What time does the event start? Click on \'Select time\' and tell us !</string>
    <string name="error_date">Hey hey hey, can\'t create it without knowing the date! Click on \'Select date\' and pick a day.</string>
    <string name="event_feed">Be a Helpee</string>
    <string name="my_events">My events</string>
    <string name="heroes">Heroes</string>
    <string name="select_location_error">Where should your helpees come? Psst, there\'s a select location button!</string>
    <string name="details_needs_help">Needs help</string>
    <string name="helpee">Helpee</string>
    <string name="one_point_nocaps">1 Point</string>
    <string name="username">Username or e-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="loading">Loading ...</string>
    <string name="getting_help">GETTING HELP</string>
    <string name="helping">HELPING</string>
    <string name="no_events">Sorry, but there\'s no events for you :(</string>
    <string name="cancel_event">CANCEL EVENT</string>
    <string name="cant_help">I can\'t help</string>
    <string name="thanks_for_help">Thanks for your help!</string>
    <string name="oh_no">Oh no!</string>
    <string name="not_enough_points">You don\'t have enough points!</string>
    <string name="helped_msg">YOU ARE AWESOME!</string>
    <string name="no_helpee">no helpee</string>
    <string name="helpee_failed">HELPEE FAILED</string>
    <string name="completed">completed</string>
    <string name="event_done">Hope you had a great time!</string>
    <string name="helpee_sad">This makes Helpee sad :(</string>
    <string name="event_title">Event title</string>
    <string name="event_description">Event description</string>
    <string name="tap_confirm">TAP HERE TO CONFIRM</string>
    <string name="chipped_in">Thanks for chipping in! :)</string>
    <string name="not_enough_points_to_chip">You don\'t have enough points to chip in.</string>
    <string name="wrong_user_pass">Wrong username or password, are you sure that\'s it?</string>
    <string name="user_pass_req">Please ensure your email is valid, username longer than 3 letters and password contains at least one uppercase and lowercase letter, a number, special sign, and is longer than 6 characters.</string>
    <string name="email">E-mail</string>
    <string name="user_name">Username</string>
    <string name="click_cancel">Click here to cancel</string>
    <string name="no_description_event">No description</string>

</resources>
