<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:background="@color/main_blue"
        android:minHeight="?attr/actionBarSize">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/default_padding"
                android:gravity="center_vertical"
                android:text="@string/create_new_event"
                android:textColor="@color/white"
                android:textSize="@dimen/abc_text_size_title_material_toolbar" />

            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/basic_padding"
                android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha" />
        </FrameLayout>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/create_event_btn"
        style="@style/LargeTextButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:background="@color/md_yellow_800"
        android:clickable="true"
        android:text="@string/create_an_event"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <ScrollView
        android:layout_above="@id/create_event_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="@drawable/bottom_shadow">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/basic_padding">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/event_title"
                    style="@style/EditTextUserInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/basic_padding"
                    android:layout_marginRight="@dimen/basic_padding"
                    android:hint="@string/event_title"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelText="event_title"
                    app:met_floatingLabelTextColor="@color/grey_subtitle"
                    app:met_textColorHint="@color/grey_subtitle"
                    app:met_underlineColor="@color/amber_main"
                    app:met_clearButton="true" />


                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/event_description"
                    style="@style/EditTextUserInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/basic_padding"
                    android:layout_marginLeft="@dimen/basic_padding"
                    android:layout_marginRight="@dimen/basic_padding"
                    android:hint="@string/event_description"
                    android:lines="2"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelText="Description"
                    app:met_floatingLabelTextColor="@color/grey_subtitle"
                    app:met_textColorHint="@color/grey_subtitle"
                    app:met_underlineColor="@color/amber_main" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/basic_padding"
                    android:text="@string/reward"
                    android:textColor="@color/grey_subtitle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/basic_padding"
                    android:weightSum="10"

                    >

                    <ImageView
                        android:id="@+id/sub_points_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:src="@drawable/minus_button" />

                    <TextView
                        android:id="@+id/points_added"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:gravity="center"
                        android:text="@string/single_point"
                        android:textAllCaps="true"
                        android:textColor="@color/main_blue"
                        android:textSize="@dimen/abc_text_size_title_material" />

                    <ImageView
                        android:id="@+id/add_points_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:src="@drawable/plus_button" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:padding="@dimen/basic_padding">

                        <TextView
                            android:id="@+id/date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:textColor="@color/grey_subtitle" />

                        <TextView
                            android:id="@+id/date_output"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/date"
                            android:text="@string/select_date"
                            android:textColor="@color/main_blue"
                            android:textSize="@dimen/abc_text_size_title_material" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:padding="@dimen/basic_padding">

                        <TextView
                            android:id="@+id/time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time"
                            android:textColor="@color/grey_subtitle" />

                        <TextView
                            android:id="@+id/time_output"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/time"
                            android:text="@string/select_time"
                            android:textColor="@color/main_blue"
                            android:textSize="@dimen/abc_text_size_title_material" />

                    </RelativeLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/basic_padding"
                    android:text="@string/location"
                    android:textColor="@color/grey_subtitle" />

                <TextView
                    android:id="@+id/location_output"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/date"
                    android:layout_marginBottom="@dimen/basic_padding"
                    android:paddingLeft="@dimen/basic_padding"
                    android:text="@string/select_location"
                    android:textColor="@color/main_blue"
                    android:textSize="@dimen/abc_text_size_title_material" />

            </LinearLayout>


        </FrameLayout>

    </ScrollView>



</RelativeLayout>