<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="match_parent">

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:textSize="@dimen/extra_large_text"
              android:id="@+id/login_text"
        android:padding="@dimen/basic_padding"
            android:fontFamily="sans-serif"
        android:lineSpacingExtra="5dp"
        android:textColor="@color/login_text_grey"
              android:layout_marginTop="100dp"
              android:paddingRight="@dimen/default_padding"
              android:text="@string/login_text"
            />



    <TextView
        android:layout_alignParentBottom="true"
            android:id="@+id/login_button"
            android:layout_centerInParent="true"
            android:background="@color/button_bg"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/log_in"
        />
    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="match_parent"
        android:layout_above="@id/login_button"
        android:layout_height="@dimen/button_size"
        android:layout_gravity="center_horizontal"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/click_to_create_account"
        android:padding="@dimen/basic_padding"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/account_register_grey"
        android:layout_marginBottom="@dimen/basic_padding"
        android:layout_above="@id/facebook_login_button"
        android:id="@+id/create_account"
        android:gravity="center"
        />



    <FrameLayout android:layout_width="match_parent"
                 android:id="@+id/fragment_container"
                 android:layout_height="match_parent"></FrameLayout>
</RelativeLayout>